package com.mon0mon.makingcleanarchitecture.account.domain;

public class Activity {
}
