package com.mon0mon.makingcleanarchitecture.adapter.in.web;

public class AccountController {
}
