package com.mon0mon.makingcleanarchitecture.adapter.out.persistence;

public interface SpringDataAccountRepository {
}
