package com.mon0mon.makingcleanarchitecture.application.port.out;

public interface LoadAccountPort {
}
